# penv

./: .gitignore  Makefile  build-proot.sh  config.sh  go.mod  go.work  index.json  index.py  penv  penv.sh  rustfmt.toml
.github/workflows/: build-arch.yml  build-debian.yml  generate-index.yml
cmd/client/: main.go
cmd/pinit/: main.go
container-test/: VULNERABILITIES.md  run-tests.sh  runner.sh
container-test/tests/: 01-namespace-escape.sh  02-filesystem-escape.sh  03-privilege-escalation.sh  04-resource-isolation.sh  05-device-access.sh  06-procfs-sysfs.sh  07-network-isolation.sh  08-overlayfs-escape.sh  09-information-leak.sh  10-exploitation-chains.sh
helpers/: deb-mod-cleanup.sh  finalize.sh  fix-perm.sh  setup.sh  startup.sh
helpers/patches/: universal.sh
lib/: commands.sh  config.sh  distro.sh  env.sh  index.sh  utils.sh
overrides/etc/profile.d/: 99-penv.sh
overrides/etc/skel/: .bashrc
pkg/distro/: distro_test.go
rtk/: .gitignore  build-initramfs.sh  busybox.config  linux.config  run.sh
rtk/root/: init  init_lately
rtk/root/rtk/: init_lately  netsetup.sh  udhcpc.script
src/: apparmor.profile  go.mod  go.sum  pchroot.go
src/client/: go.mod  main.go
src/common/: distro.go  distro_test.go  go.mod
src/hook/: env.go  execution_test.go  executor.go  graph.go  hook_test.go  manager.go  parser.go  reference.hook  service_test.go  services.go  types.go
src/pinit/: main.go
src/rootbox/: apparmor.profile  main.c  mount.c  namespace.c  overlayfs.c  pty.c  rootbox.c  rootbox.h  sysctl.conf  utils.c
src/rootbox-rs/: Cargo.toml  build.sh
src/rootbox-rs/src/: config.rs  error.rs  main.rs  mount.rs  namespace.rs  pty.rs
src/shared/: init.go
src/shared/console/: console.go  pterm_printer.go
src/shared/distro/: distro.go
src/shared/index/: addon.go  distro.go  distro_test.go  download.go  filter.go  remote.go
src/shared/logger/: logger.go
src/shared/proc/: environment.go  process.go  spawner.go
