[package]
name = "rootbox"
version = "2.0.0"
edition = "2021"
authors = ["aeliux"]
description = "A container-like isolation tool using Linux namespaces and overlayfs"
license = "MIT OR Apache-2.0"

[dependencies]
# CLI parsing
clap = { version = "4.5", features = ["derive", "cargo"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Configuration
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

# Linux system calls
nix = { version = "0.29", features = ["user", "mount", "sched", "process", "hostname", "signal", "ioctl", "term", "fs", "poll"] }
libc = "0.2"

# Logging - lightweight alternative
log = "0.4"
env_logger = "0.11"

# Optional shell completion generation
clap_complete = { version = "4.5.61", optional = true }

[features]
default = []
shell-completion = ["clap_complete"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
